fixed awkward width on spaceman photo tablet view, correct border radius and padding top on mobile view of image

--- a/css/index.css
+++ b/css/index.css
@@ -477,11 +477,14 @@ footer {
 @media (max-width: 900px) {
   .home .walk .walk-img img {
     margin-top: -15px;
+    width: 90%;
   }
 }
 @media (max-width: 500px) {
   .home .walk .walk-img img {
     width: 100%;
     padding-top: 20px;
+    padding-top: 0;
+    margin-top: 10px;
   }
 }
