--- a/less/home-page.less
+++ b/less/home-page.less
@@ -177,10 +177,13 @@
 
         @media @tablet{
           margin-top: -15px;
+          width: 90%;
         }
         @media @phone {
           width: 100%;
           padding-top: 20px;
+          padding-top: 0;
+          margin-top: 10px;
         }
       }
     }   
